Some MySQL versions need an explicit run of mysql_install_db when creating the database initially. So, let's do that if mysql_install_db is found.

BUG: 185395

svn path=/trunk/kdesupport/akonadi/; revision=1105780